# alexa-claude-bridge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
lambda/: handler.py
scripts/: setup_aws.sh
skill/: interaction_model.json
src/alexa_claude_bridge/: __init__.py  bridge.py  config.py  daemon.py  keyboard.py  notifier.py  sqs_watcher.py  summarizer.py  terminal.py  wrapper.py
