[project]
name = "alexa-claude-bridge"
version = "0.3.0"
description = "Voice-control your Claude Code REPL via Alexa — keyboard injection + auto-notification"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "httpx>=0.28",
]

[project.scripts]
alexa-bridge = "alexa_claude_bridge.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alexa_claude_bridge"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/alexa_claude_bridge/bridge.py" = ["E501"]
